--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "antd": "^4.12.3",
-    "ol": "^6.5.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "typescript": "^4.1.2",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.5.23",
     "@types/ol": "^6.4.2"
   }
 }
