--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.12.3",
+    "date-fns": "^2.19.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
+    "react-css-theme-switcher": "^0.2.3",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
     "react-redux": "^7.2.2",
